# primitive_editor

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yaml
controller/: Controller.cpp  Controller.h
model/: Document.cpp  Document.h
model/primitives/: Circle.cpp  Circle.h  Line.cpp  Line.h  Polyline.cpp  Polyline.h  Rectangle.cpp  Rectangle.h  Shape.h
view/: Renderer.cpp  Renderer.h
